--- a/ryanschmied-website/public/index.html
+++ b/ryanschmied-website/public/index.html
@@ -24,9 +24,9 @@
     <!-- particles.js container --> 
     <div id="particles-js"></div> 
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js --> 
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
     <!-- stats.js lib --> 
-    <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+    <script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script>
         ScrollReveal({ reset: true });
